Fix text align in the video zoom message

--- a/resources/style/controls.less
+++ b/resources/style/controls.less
@@ -199,6 +199,10 @@ i.button-icon.icon-screen {
     text-shadow: 1px 1px 4px black;
 }
 
+.alt-scroll-message-container p {
+    text-align: center;
+}
+
 .masterVideo {
 }
 
